--- a/doc/main.tex
+++ b/doc/main.tex
@@ -18,4 +18,9 @@
 
 \begin{document}
 	\maketitle
+
+	\begin{enumerate}
+		\item Task 1: the input image has 600 rows and 450 columns of pixels.
+		\item Task 2: nothing to report.
+	\end{enumerate}
 \end{document}
